fixed overflow

--- a/src/styles/pages/_videos.scss
+++ b/src/styles/pages/_videos.scss
@@ -2,12 +2,17 @@
   height: 5rem;
 }
 .video-container {
+  top: 5rem;
+  bottom: 0;
   display: grid;
   align-content: flex-start;
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
 }
 .video-card {
   height: 25rem;
+  & .video-info {
+    min-height: 7rem;
+  }
 }
 .video-details {
   overflow-y: auto;
@@ -27,7 +32,7 @@
   .video-details {
     overflow-y: hidden;
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 3fr 1fr;
     align-content: flex-start;
     & > * {
       overflow-y: auto;
